WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
143202
Include cache entry worth to json dump
https://bugs.webkit.org/show_bug.cgi?id=143202
Summary
Include cache entry worth to json dump
Antti Koivisto
Reported
2015-03-29 17:00:59 PDT
Useful for analyzing cache performance.
Attachments
patch
(10.28 KB, patch)
2015-03-29 17:11 PDT
,
Antti Koivisto
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2015-03-29 17:11:23 PDT
Created
attachment 249703
[details]
patch
WebKit Commit Bot
Comment 2
2015-03-29 17:13:42 PDT
Attachment 249703
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.cpp:430: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.h:75: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 3
2015-03-29 17:14:06 PDT
Comment on
attachment 249703
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=249703&action=review
> Source/WebKit2/NetworkProcess/cache/NetworkCacheEntry.cpp:154 > + json.append(String::format("\"bodySize\": %zu,\n", info.bodySize)); > + json.append(String::format("\"worth\": %f,\n", info.worth));
I think it’s better to use appendNumber than String::format for putting numbers into a StringBuilder.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug